--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
-}
+/* App.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Hacer que el contenedor ocupe toda la altura de la ventana */
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .content {
+    flex-grow: 1; /* Hacer que el contenido principal ocupe el espacio restante */
+    padding: 20px; /* Añadir espacio alrededor del contenido principal */
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  
+  /* Estilos adicionales según sea necesario */
+  
